--- a/application/admin/view/base.html
+++ b/application/admin/view/base.html
@@ -6,7 +6,7 @@
     <title>LaySNS后台管理模板</title>
     <link rel="stylesheet" href="__ADMIN__/plugins/layui/css/layui.css" media="all" />
     <link rel="stylesheet" href="__ADMIN__/css/main.css" media="all" /> {block name="css"}{/block}
-
+    <link rel="stylesheet" href="__ADMIN__/css/index.css" media="all" />
     <!--[if lt IE 9]>
     <script src="__CSS__/html5shiv.min.js"></script>
     <script src="__CSS__/respond.min.js"></script>
@@ -15,7 +15,7 @@
     <script type="text/javascript" src="__ADMIN__/plugins/layui/layui.js"></script>
 </head>
 
-<body>
+<body class="iframe_body">
 
     <!--主体-->
     <div style="margin-bottom:36px;">
