--- a/template/c_default/html/My_editUser.html
+++ b/template/c_default/html/My_editUser.html
@@ -46,7 +46,7 @@
 		
 		<div class="lj_sz_btn">
 			<a class="lj_sz_btn_a" href="#">保存</a>
-			<a href="__PUBLIC__/login/login.html">退出登录</a>
+			<a href="../login/login.html">退出登录</a>
 		</div>
 		</div>
     	<script src="__PUBLIC__/js/public/jquery-1.8.3.min.js"></script>
