--- a/template/c_default/html/Login_login.html
+++ b/template/c_default/html/Login_login.html
@@ -6,10 +6,10 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
 		<title>登录</title>
-		<script src="../js/public/rem.js"></script>
-		<link rel="stylesheet" href="../css/public/reset.css">
-		<link rel="stylesheet" href="../css/public/base.css" />
-		<link rel="stylesheet" href="../css/login/login.css">
+		<script src="__PUBLIC__/js/public/rem.js"></script>
+		<link rel="stylesheet" href="__PUBLIC__/css/public/reset.css">
+		<link rel="stylesheet" href="__PUBLIC__/css/public/base.css" />
+		<link rel="stylesheet" href="__PUBLIC__/css/login/login.css">
 
 	</head>
 
@@ -18,7 +18,7 @@
 
 			<div class="header-zp">
 				<span class="return" onclick="">
-            	<!--<img src="../../image/public/return-zp@2x.png" />-->
+            	<!--<img src="../../images/public/return-zp@2x.png" />-->
             </span>
 				<h3>登录</h3>
 			</div>
@@ -37,13 +37,13 @@
 					<button class="btn dis" type="button" onclick="loginFun()">登录</button>
 				</form>
 				<div class="login-new">
-					<a href="./register.html" class="register">注册</a>
-					<a href="./retrieve.html" class="retrieve">忘记密码?</a>
+					<a href="register.html" class="register">注册</a>
+					<a href="retrieve.html" class="retrieve">忘记密码?</a>
 				</div>
 			</div>
 		</div>
 	</body>
-	<script src="../js/public/jquery-1.8.3.min.js"></script>
-	<script src="../js/login/login.js"></script>
+	<script src="__PUBLIC__/js/public/jquery-1.8.3.min.js"></script>
+	<script src="__PUBLIC__/js/login/login.js"></script>
 
 </html>
