--- a/template/c_default/html/Login_register.html
+++ b/template/c_default/html/Login_register.html
@@ -6,10 +6,10 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
 		<title>注册</title>
-		<script src="../js/public/rem.js"></script>
-		<link rel="stylesheet" href="../css/public/reset.css">
-		<link rel="stylesheet" href="../css/public/base.css" />
-		<link rel="stylesheet" href="../css/login/register.css">
+		<script src="__PUBLIC__/js/public/rem.js"></script>
+		<link rel="stylesheet" href="__PUBLIC__/css/public/reset.css">
+		<link rel="stylesheet" href="__PUBLIC__/css/public/base.css" />
+		<link rel="stylesheet" href="__PUBLIC__/css/login/register.css">
 
 	</head>
 
@@ -17,7 +17,7 @@
 		<div class="registerbox">
 			<div class="header-zp">
 				<span class="return" onclick="javascript:history.back(-1)">
-                    <img src="../image/public/return-zp@2x.png" />
+                    <img src="__PUBLIC__/images/public/return-zp@2x.png" />
                 </span>
 				<h3>注册</h3>
 			</div>
@@ -63,15 +63,15 @@
 					</div>
 				</form>
 				<div class="login-new">
-					<a href="./login.html" class="register">已有账号 登录</a>
+					<a href="login.html" class="register">已有账号 登录</a>
 					<a href="">用户协议</a>
 				</div>
 			</div>
 		</div>
 	</body>
-	<script src="../js/public/jquery-1.8.3.min.js"></script>
-	<script src="../js/public/base.js"></script>
-	<script src="../js/login/register.js">
+	<script src="__PUBLIC__/js/public/jquery-1.8.3.min.js"></script>
+	<script src="__PUBLIC__/js/public/base.js"></script>
+	<script src="__PUBLIC__/js/login/register.js">
 	</script>
 
 </html>
