--- a/template/c_default/html/Login_retrieve.html
+++ b/template/c_default/html/Login_retrieve.html
@@ -5,17 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>找回密码</title>
-    <script src="../js/public/rem.js"></script>
-    <link rel="stylesheet" href="../css/public/reset.css">
-    <link rel="stylesheet" href="../css/public/base.css"/>
-    <link rel="stylesheet" href="../css/login/retrieve.css">
+    <script src="__PUBLIC__/js/public/rem.js"></script>
+    <link rel="stylesheet" href="__PUBLIC__/css/public/reset.css">
+    <link rel="stylesheet" href="__PUBLIC__/css/public/base.css"/>
+    <link rel="stylesheet" href="__PUBLIC__/css/login/retrieve.css">
     
 </head>
 <body>
     <div class="retrievebox">
         <div class="header-zp">
             <span class="return" onclick="javascript:history.back(-1)">
-                <img src="../image/public/return-zp@2x.png" /></span>
+                <img src="__PUBLIC__/images/public/return-zp@2x.png" /></span>
             <h3>手机短信找回密码</h3>
         </div>
         <div class="retrieve-new-page">
@@ -45,6 +45,6 @@
            </div>
     </div>
 </body>
-<script src="../js/public/jquery-1.8.3.js"></script>
- <script src="../js/login/retrieve.js"></script>
+<script src="__PUBLIC__/js/public/jquery-1.8.3.js"></script>
+ <script src="__PUBLIC__/js/login/retrieve.js"></script>
 </html>
