--- a/template/c_default/html/index_index.html
+++ b/template/c_default/html/index_index.html
@@ -33,28 +33,28 @@
         <div class="nav-wrap-zp">
             <ul>
                 <li class="itemColor-1">
-                    <a href="{:url('Invest/index_ylf')}">
+                    <a href="{:url('Wallet/wallet')}">
                         <img src="__PUBLIC__/images/home/Assets-icon@2x.png" alt="">
                         <span>投资</span>
                         <!-- <span>26035.00</span> -->
                     </a>
                 </li>
                 <li class="itemColor-2">
-                    <a href="{:url('Invest/index_ylf')}">
+                    <a href="{:url('Index/totalRevenue')}">
                         <img src="__PUBLIC__/images/home/Profit-icon@2x.png" alt="">
                         <span>总收益</span>
                         <!-- <span>265.00</span> -->
                     </a>
                 </li>
                 <li class="itemColor-3">
-                    <a href="{:url('Invest/index_ylf')}">
+                    <a href="#">
                         <img src="__PUBLIC__/images/home/Today's earnings-icon@2x.png" alt="">
                         <span>今日收益</span>
                         <!-- <span>35.00</span> -->
                     </a>
                 </li>
                 <li class="itemColor-4">
-                    <a href="{:url('Wallet/wallet')}">
+                    <a href="#">
                         <img src="__PUBLIC__/images/home/wallet-icon@2x.png" alt="">
                         <span>钱包余额</span>
                         <!-- <span>135.00</span> -->
@@ -67,14 +67,14 @@
                     </a>
                 </li>
                 <li class="itemColor-6">
-                    <a href="{:url('Invest/index_ylf')}">
+                    <a href="{:url('Index/directDrive')}">
                         <img src="__PUBLIC__/images/home/Assets-icon@2x.png" alt="">
                         <span>团队</span>
                         <!-- <span>35.00</span> -->
                     </a>
                 </li>
                 <li class="itemColor-7">
-                    <a href="{:url('Invest/index_ylf')}">
+                    <a href="{:url('Index/present')}">
                         <img src="__PUBLIC__/images/home/withdraw-money-icon@2x.png" alt="">
                         <span>提币</span>
                         <!-- <span>35.00</span> -->
