--- a/application/admin/view/currency_edit.html
+++ b/application/admin/view/currency_edit.html
@@ -31,6 +31,12 @@
                     </div>
                 </div>
                 <div class="layui-form-item">
+                    <label class="layui-form-label">钱包地址</label>
+                    <div class="layui-input-inline">
+                        <input type="text" name="wallet_addr"  value="{$res['note']}" placeholder="请输入币种地址" class="layui-input txt">
+                    </div>
+                </div>
+                <div class="layui-form-item">
                     <label class="layui-form-label">币种图标</label>
                     <div class="layui-input-inline">
                         <input type="file" name="log" id="file" onchange="checkFileExt(this.value)">
