--- a/application/index/view/index_tips.html
+++ b/application/index/view/index_tips.html
@@ -69,7 +69,7 @@
                 <li class="itemColor-6">
                     <a href="directDrive.html">
                         <img src="/public/images/Assets-icon@2x.png" alt="">
-                        <span>团队</span>
+                        <span>我的团队</span>
                         <!-- <span>35.00</span> -->
                     </a>
                 </li>
