--- a/template/c_default/html/index_index.html
+++ b/template/c_default/html/index_index.html
@@ -33,7 +33,7 @@
         <div class="nav-wrap-zp">
             <ul>
                 <li class="itemColor-1">
-                    <a href="{:url('Wallet/wallet')}">
+                    <a href="{:url('Wallet/Wallet')}">
                         <img src="__PUBLIC__/images/home/Assets-icon@2x.png" alt="">
                         <span>投资</span>
                         <!-- <span>26035.00</span> -->
