--- a/application/index/view/index_tips.html
+++ b/application/index/view/index_tips.html
@@ -67,7 +67,7 @@
                     </a>
                 </li>
                 <li class="itemColor-6">
-                    <a href="directDrive.html">
+                    <a href="index/index/directDrive.html">
                         <img src="/public/images/Assets-icon@2x.png" alt="">
                         <span>我的团队</span>
                         <!-- <span>35.00</span> -->
