--- a/application/index/view/index_directdrive.html
+++ b/application/index/view/index_directdrive.html
@@ -41,8 +41,8 @@
   
   <script>
 
-var b={$aa};
-if(b){
+
+if(var b={$aa}){
 	for(var i = 0; i <b.length; i++){
 	var unixTimestamp = new Date(b[i].regtime*1000) ;
 	commonTime = unixTimestamp.toLocaleString();
