--- a/application/index/view/login_index.html
+++ b/application/index/view/login_index.html
@@ -33,7 +33,7 @@
 						<span class="from-tit">密码:</span>
 						<input type="password" name="password" placeholder="请输入密码" class="pptt pwd">
 					</div>
-					<button class="btn dis" id="btn" onclick="loginFun()">登录</button>
+					<button class="btn dis" id="btn">登录</button>
 
 				</form>
 				<div class="login-new">
