--- a/application/index/view/login_register.html
+++ b/application/index/view/login_register.html
@@ -7,9 +7,9 @@
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
 		<title>注册</title>
 		<script src="/public/js/rem.js"></script>
-		<link rel="stylesheet" href="/public/css/reset.css">
-		<link rel="stylesheet" href="/public/css/base.css" />
-		<link rel="stylesheet" href="/public/css/register.css">
+		<link rel="stylesheet" href="__PUBLIC__css/reset.css">
+		<link rel="stylesheet" href="__PUBLIC__css/base.css" />
+		<link rel="stylesheet" href="__PUBLIC__css/register.css">
 
 	</head>
 
@@ -17,7 +17,7 @@
 		<div class="registerbox">
 			<div class="header-zp">
 				<span class="return" onclick="javascript:history.back(-1)">
-                    <img src="/public/images/return-zp@2x.png" />
+                    <img src="__PUBLIC__images/return-zp@2x.png" />
                 </span>
 				<h3>注册</h3>
 			</div>
@@ -69,9 +69,9 @@
 			</div>
 		</div>
 	</body>
-	<script src="/public/js/jquery-1.8.3.min.js"></script>
-	<script src="/public/js/base.js"></script>
-	<script src="/public/js/register.js">
+	<script src="__PUBLIC__js/jquery-1.8.3.min.js"></script>
+	<script src="__PUBLIC__js/base.js"></script>
+	<script src="__PUBLIC__js/register.js">
 	</script>
 
 </html>
