--- a/application/index/view/My_my.html
+++ b/application/index/view/My_my.html
@@ -33,17 +33,17 @@
 							<div class="usernameear">
 								<div class="left"><img src="__PUBLIC__/images/my/ren.png" /></div>
 								<span class="username">用户名:</span>
-								<span class="text" style="color: #8CFFFF;">abc18420236985</span>
+								<span class="text" style="color: #8CFFFF;">{$user.username}</span>
 							</div>
 							<div class="usernameear">
 								<div class="left"><img src="__PUBLIC__/images/my/youxiang.png" /></div>
 								<span class="username">电邮:</span>
-								<span class="text">86875895@qq.com</span>
+								<span class="text">{$user.usermail}</span>
 							</div>
 							<div class="usernameear">
 								<div class="left"><img src="__PUBLIC__/images/my/shouji.png" /></div>
 								<span class="username">电话号码:</span>
-								<span class="text">18420236985</span>
+								<span class="text">{$user.mobile}</span>
 							</div>
 
 						</div>
