--- a/application/index/view/login_register.html
+++ b/application/index/view/login_register.html
@@ -22,7 +22,7 @@
 				<h3>注册</h3>
 			</div>
 			<div class="reg-new-page">
-				<form action="{:url('index/login/regis')}" method="post" class="reg-from">
+				<!-- <form action="{:url('index/login/regis')}" method="post" class="reg-from"> -->
 					<div class="info mistake"></div>
 					<div class="from-group">
 						<span class="from-tit">用户名:</span>
@@ -33,6 +33,11 @@
 						<span class="from-tit">密码:</span>
 						<input type="password" placeholder="请输入用户密码" name="password" value class="pptt password">
 					</div>
+					<div class="info mistake"></div>
+					<div class="from-group">
+							<span class="from-tit">确认密码:</span>
+							<input type="password" placeholder="请输入用户密码" name="password" value class="pptt password">
+						</div>
 					<div class="info mistake"></div>
 					<div class="from-group">
 						<span class="from-tit">邮箱:</span>
@@ -61,7 +66,7 @@
 					<div class="reg-btn">
 						<button  id="submit" class="btn dis submit-btn">注册</button>
 					</div>
-				</form>
+				<!-- </form> -->
 				<div class="login-new">
 					<a href="" class="register">已有账号 登录</a>
 					<a href="">用户协议</a>
@@ -75,6 +80,9 @@
 	</script>
 
 </html>
+<script>
+	
+</script>
 <!--<script>-->
 
 		<!--# 点击注册事件-->
