--- a/application/index/view/login_index.html
+++ b/application/index/view/login_index.html
@@ -33,12 +33,8 @@
 						<span class="from-tit">密码:</span>
 						<input type="password" id="password" name="password" placeholder="请输入密码" class="pptt pwd">
 					</div>
-<<<<<<< HEAD
-					<button class="btn dis" type="button" id="btn" >登录</button>
-=======
+					<!-- <button class="btn dis" type="button" id="btn" >登录</button> -->
 					<button class="btn dis" id="btn">登录</button>
->>>>>>> a2fd9d1826f13e2343a965114ebacfefbfff7bb2
-
 				</form>
 				<div class="login-new">
 					<a href="{:url('index/login/register')}" class="register">注册</a>
