--- a/application/index/view/login_register.html
+++ b/application/index/view/login_register.html
@@ -36,7 +36,7 @@
 					<div class="info mistake"></div>
 					<div class="from-group">
 							<span class="from-tit">确认密码:</span>
-							<input type="password" placeholder="请输入用户密码" name="password" value class="pptt password">
+							<input type="password" placeholder="请输入用户密码" name="passwordb" value class="pptt password">
 						</div>
 					<div class="info mistake"></div>
 					<div class="from-group">
