--- a/application/index/view/login_index.html
+++ b/application/index/view/login_index.html
@@ -70,7 +70,7 @@
 
 		}
 
-		//ajax去服务器端校验
+	//ajax去服务器端校验
 
 		var data= {mobile:mobile,password:password};
 
@@ -86,9 +86,9 @@
 
 			success:function(msg){
 
-				alert(msg);
+				alert(msg.msg);
 
-
+				window.location.href=window.location;
 
 			}
 
