--- a/application/index/view/login_register.html
+++ b/application/index/view/login_register.html
@@ -154,7 +154,7 @@ var datas={username:userName,password:password,usermail:userEmail,mobile:mobiles
 				dataType:'json',
 				success:function(msg){
 
-					alert(msg.msg+""+msg.username);
+					alert(msg.msg);
 
 
 
