--- a/application/index/view/My_my.html
+++ b/application/index/view/My_my.html
@@ -26,24 +26,38 @@
 						<img src="__PUBLIC__/images/public/share-btn-zp.png" />
 					</span>
 				</div>
-
+				
+				
+				<!--个人头像和昵称-->
+				<div class="header">
+					<img src="../../../public/images/default.png" class="headportrait"/>
+					<br/>
+					<p class="nickname">安雅兮</span>
+				</div>
+				
+				
+				
+               <!--个人信息-->
 				<ul id="con">
 					<li class="show" style="display: block;">
 						<div class="mingpian">
 							<div class="usernameear">
-								<div class="left"><img src="__PUBLIC__/images/my/ren.png" /></div>
-								<span class="username">用户名:</span>
+								<div class="left"><img src="__PUBLIC__/images/my/youxiang.png" /></div>
+								<span class="username">电邮:</span>
 								<span class="text" style="color: #8CFFFF;">{$user.username}</span>
 							</div>
 							<div class="usernameear">
-								<div class="left"><img src="__PUBLIC__/images/my/youxiang.png" /></div>
-								<span class="username">电邮:</span>
+								
+								<div class="left"><img src="__PUBLIC__/images/my/shouji.png" /></div>
+								<span class="username">电话号码:</span>
 								<span class="text">{$user.usermail}</span>
 							</div>
 							<div class="usernameear">
-								<div class="left"><img src="__PUBLIC__/images/my/shouji.png" /></div>
-								<span class="username">电话号码:</span>
-								<span class="text">{$user.mobile}</span>
+								<div class="left"><img src="__PUBLIC__/images/my/ren.png" /></div>
+								<span class="username">推广码:</span>
+								<!--<span class="text">{$user.mobile}</span>-->
+								<span class="text3 text">12356899</span>
+								
 							</div>
 
 						</div>
