my模块布局的改变

--- a/public/css/my/my.css
+++ b/public/css/my/my.css
@@ -48,12 +48,7 @@
 	background: #3A7FFA;
 	
 }
-#con{
-	
-	
-	
-	
-}
+
 .mingpian{
 	
 	width: 6rem;
@@ -126,6 +121,13 @@
 .right img{
 	
 	width: 100%;
+	
+}
+.text3{
+	
+	
+	
+	
 	
 }
 
