--- a/application/index/view/wallet_wallet.html
+++ b/application/index/view/wallet_wallet.html
@@ -45,7 +45,7 @@
 							{/foreach}
 							<!-- </volist> -->
 						</div>
-						<i class="iconfont icon hideIcon">&#xe676;</i>
+						<i class="iconfont icon hideIcon">&#xe66f;</i>
 					</div>
 					<!--投资-弹框-->
 					<div class="assetPopup pop">
@@ -53,10 +53,10 @@
 						<div class="det">币值种类</div>
 						{foreach name="htd_currency" item="htd_currency"}
 							<div class="currency ur" onclick="wallet('{$htd_currency.wallet_addr}')">
-								<span>{$htd_currency.alias_name}</span>
+								<span>{$htd_currency.alias_name}</span>								
 							</div>
 						{/foreach}
-						<i class="iconfont icon hideTz">&#xe676;</i>
+						<i class="iconfont icon hideTz">&#xe66f;</i>
 					</div>
 					<!--二维码-弹框-->
 					<div class="code-up hideEvm">
@@ -69,7 +69,7 @@
 						<div class="tu">
 							<img src="__PUBLIC__/images/wallet/timg.jpg" />
 						</div>
-						<i class="iconfont shut">&#xe676;</i>
+						<i class="iconfont shut">&#xe66f;</i>
 						
 						<input type="file" id="f"  name="f" style="display:none"/>
 						<div class="notarize" onclick="f.click()">上传凭证</div>
@@ -137,6 +137,9 @@
         <!-- 底部导航 -->
         <div class="bottomNavWrap container" id="bottomNavWrap"></div>
     </div>
+    
+    <!--弹框-阴影-->
+	<div class="shadow"></div>
 	
 	<script src="__PUBLIC__/js/public/jquery-1.8.3.min.js"></script>
 	<script src="__PUBLIC__/js/public/tab.js" ></script>
