--- a/public/css/login/login.css
+++ b/public/css/login/login.css
@@ -6,11 +6,15 @@ body {
     height: 100vh;
     font-size: 0.24rem;
     font-family: "PingFangMedium";
-    background: -moz-linear-gradient(top, #1de5e2 0%, #b588f7 100%);
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #1de5e2), color-stop(100%, #b588f7));
-    background: -webkit-linear-gradient(top, #1de5e2 0%, #b588f7 100%);
-    background: -o-linear-gradient(top, #1de5e2 0%, #b588f7 100%);
-    background: -ms-linear-gradient(top, #1de5e2 0%, #b588f7 100%);
+    background: -moz-linear-gradient(top, #2866a3 0%, #5ebfc8 100%);
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #2866a3), color-stop(100%, #5ebfc8));
+    background: -webkit-linear-gradient(top, #2866a3 0%, #5ebfc8 100%);
+    background: -o-linear-gradient(top, #2866a3 0%, #5ebfc8 100%);
+    background: -ms-linear-gradient(top, #2866a3 0%, #5ebfc8 100%);
+}
+
+.header-zp{
+    background-color: transparent;
 }
 
 .loginbox{
@@ -26,31 +30,45 @@ body {
     box-sizing: border-box;
 }
 .from-group{
-    /* margin-top: .2rem; */
-    border-bottom: .01rem solid  #e0e0e0;
-    position: relative;
-    background: #ffffff;
+    display:flex;
+    display: -webkit-box; 
+    display: -moz-box; 
+    display: -webkit-flex; 
+    display: -moz-flex; 
+    display: -ms-flexbox; 
     border-radius: .2rem;
     height: .8rem;
     line-height: .8rem;
-    background: -moz-linear-gradient(left, #facd68 0%, #fc76b3 100%);
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #facd68), color-stop(100%, #fc76b3));
-    background: -webkit-linear-gradient(left, #facd68 0%, #fc76b3 100%);
-    background: -o-linear-gradient(left, #facd68 0%, #b588f7 100%);
-    background: -ms-linear-gradient(left, #facd68 0%, #b588f7 100%);
+    background-color: transparent;
  }
+
+ .from-group .from-icon{
+    display: inline-block;
+    border: .01rem solid #ffffff;
+    width: 80%;    
+    border-radius: .1rem;
+    height:.8rem;
+}
+
+.from-group .from-icon img{
+    padding-left: .3rem;
+    height:.3rem;
+    width: .3rem;
+    vertical-align: middle;
+}
  .from-group .from-tit{
     display: inline-block;
-    width: 1.2rem;
-    font-size:.3rem;
-    color: #1153f3;
-    padding-left:.1rem;
+    width: 20%;
+    font-size: .3rem;
+    color: #ffffff;
+    padding-left: .1rem;
 }
   
+ 
 .from-group input{
     padding-left:.1rem;
-    color: #17223b;
-    font-size: .3rem;
+    font-size: .2rem;
+    width: 85%; 
     height:.8rem;
 }
  .info.mistake {
@@ -58,28 +76,28 @@ body {
 }
 
 .info {
-    height: .3rem;
+    height: .5rem;
     text-align: center;
-    /* padding-right: 3rem; */
     width: 80%;
+    line-height: .5rem;
 }
 
  .btn{
-    margin-top:.2rem;
+    margin-top:.4rem;
     width: 100%;
     height: .8rem;
-    color: #ffffff;
+    color: #1153f3;
     border: 0;
     font-size: .3rem;
     border-radius: .2rem;
 }
- .dis{
-     background: -moz-linear-gradient(left, #b0b0b0 0%, #17223b 100%);
-     background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #b0b0b0), color-stop(100%, #17223b));
-     background: -webkit-linear-gradient(left, #b0b0b0 0%, #17223b 100%);
-     background: -o-linear-gradient(left, #b0b0b0 0%, #17223b 100%);
-     background: -ms-linear-gradient(left, #b0b0b0 0%, #17223b 100%);
- }
+.dis{
+    background: -moz-linear-gradient(left, #b0b0b0 0%, #95c5d6 100%);
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #b0b0b0), color-stop(100%, #95c5d6));
+    background: -webkit-linear-gradient(left, #b0b0b0 0%, #95c5d6 100%);
+    background: -o-linear-gradient(left, #b0b0b0 0%, #95c5d6 100%);
+    background: -ms-linear-gradient(left, #b0b0b0 0%, #95c5d6 100%);
+}
  .active{
     background: -moz-linear-gradient(left, #1de5e2 0%, #1153fc 100%);
     background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #1de5e2), color-stop(100%, #1153fc));
@@ -89,19 +107,19 @@ body {
  }
 
    .pptt::-webkit-input-placeholder { /* WebKit browsers */
-    color:#637fbe
+    color:#b8c9cf
 }
 
 .pptt:-moz-placeholder { /* Mozilla Firefox 4 to 18 */
-    color:#637fbe
+    color:#b8c9cf
 }
 
 .pptt::-moz-placeholder { /* Mozilla Firefox 19+ */
-color:#637fbe
+color:#b8c9cf
 }
 
 .pptt:-ms-input-placeholder { /* Internet Explorer 10+ */
-color: #637fbe
+color: #b8c9cf
 }
 
 .login-new{
