--- a/application/index/view/login_register.html
+++ b/application/index/view/login_register.html
@@ -82,7 +82,7 @@
 						</div>
 					</form>
 					<div class="login-new">
-						<a href="./login.html" class="register">已有账号 登录</a>
+						<a href="{:url('login/index')}" class="register">已有账号 登录</a>
 						<a href="">用户协议</a>
 					</div>
 				</div>
@@ -167,6 +167,7 @@ var datas={username:userName,password:password,usermail:userEmail,mobile:mobiles
 				success:function(msg){
 					if(msg.url){
 						console.log(msg.url);
+						suredAlert($('body'),msg.msg,msg.url);
 						window.location.replace(msg.url);
 					}else{
 						alert(msg.msg);
