--- a/application/index/view/index_index.html
+++ b/application/index/view/index_index.html
@@ -36,28 +36,24 @@
                     <a href="{:url('Wallet/Wallet')}">
                         <img src="__PUBLIC__/images/home/Assets-icon@2x.png" alt="">
                         <span>投资</span>
-                        <!-- <span>26035.00</span> -->
                     </a>
                 </li>
                 <li class="itemColor-2">
                     <a href="{:url('Index/totalRevenue')}">
                         <img src="__PUBLIC__/images/home/Profit-icon@2x.png" alt="">
                         <span>总收益</span>
-                        <!-- <span>265.00</span> -->
                     </a>
                 </li>
                 <li class="itemColor-3">
                     <a href="#">
                         <img src="__PUBLIC__/images/home/Today's earnings-icon@2x.png" alt="">
                         <span>今日收益</span>
-                        <!-- <span>35.00</span> -->
                     </a>
                 </li>
                 <li class="itemColor-4">
                     <a href="#">
                         <img src="__PUBLIC__/images/home/wallet-icon@2x.png" alt="">
                         <span>钱包余额</span>
-                        <!-- <span>135.00</span> -->
                     </a>
                 </li>
                 <li class="itemColor-5">
@@ -70,14 +66,18 @@
                    <a href="{:url('Index/login/directDrive')}">
                         <img src="__PUBLIC__/images/home/Assets-icon@2x.png" alt="">
                         <span>我的团队</span>
-                        <!-- <span>35.00</span> -->
                     </a>
                 </li>
                 <li class="itemColor-7">
                     <a href="{:url('Index/present')}">
                         <img src="__PUBLIC__/images/home/withdraw-money-icon@2x.png" alt="">
                         <span>提币</span>
-                        <!-- <span>35.00</span> -->
+                    </a>
+                </li>
+                <li class="itemColor-8">
+                    <a href="#">
+                        <img src="__PUBLIC__/images/home/stock-icon.png" alt="">
+                        <span>股权</span>
                     </a>
                 </li>
             </ul>
