分享二维码

--- a/application/index/view/login_register.html
+++ b/application/index/view/login_register.html
@@ -54,7 +54,7 @@
 					</div>
 					<div class="from-group policy">
 						<span class="from-cc">*直推人推广码:</span>
-						<input type="text" placeholder="请输入直推人推广码" name="promotion"  class="pptt promotion">
+						<input type="text" placeholder="请输入直推人推广码" value="{$promotion}"  name="promotion"  class="pptt promotion">
 					</div>
 					
 <div class="send-code mistake info"></div>
