--- a/application/index/view/index_qrcode.html
+++ b/application/index/view/index_qrcode.html
@@ -122,11 +122,11 @@
 	       <div class="header-zp">
             <span class="return" onclick="returnFun()"><img src="__PUBLIC__/images/public/return-zp@2x.png" /></span>
             <h3>分享</h3>
-            <span class="share-btn bottmBut"><img src="__PUBLIC__/images/public/share-btn-zp.png" /></span> 
+            <span class="share-btn bottmBut"><img src="__PUBLIC__/images/public/share-btn-zp.png" /></span>
            </div>
 	        
 	        
-			<input id="text" type="text" value="http://jindo.dev.naver.com/collie" style="width:80%;" hidden /><br />
+			<!--<input id="text" type="text" value="{$data.url}" style="width:80%;" hidden /><br />-->
 
 			<!--<div >
 				<div id="qrcode" style="width:150px; height:150px;position: absolute;top: 50%;left: 50%;transform: translate(-40%,70%);"></div>
@@ -155,13 +155,9 @@
 		</div>
 
 
-<<<<<<< HEAD:qrcode/qrcode.html
         <script src="https://cdn.bootcss.com/html2canvas/0.5.0-beta4/html2canvas.min.js"></script>
 		<!-- <script src="__PUBLIC__/js/public/jquery-1.8.3.min.js"></script> -->
-=======
-
 		<script src="__PUBLIC__/js/public/jquery-1.8.3.min.js"></script>
->>>>>>> d5a6d22b16b7305e79741549d68756cfe66eb8c0:home/qrcode/qrcode.html
 		<script src="__PUBLIC__/qrcode/qrcode.js"></script>
 		<script src="__PUBLIC__/js/public/base.js"></script>
 		<!--蒙版出现=> 底部（box）不能滑动-->
@@ -189,10 +185,17 @@
 				document.body.style.overflow = ''; //出现滚动条
 				document.removeEventListener("touchmove", mo, false);
 			}
-			var qrcode = new QRCode(document.getElementById("qrcode"), {
-				width: 150,
-				height: 150
-			});
+			// var qrcode = new QRCode(document.getElementById("qrcode"), {
+			// 	width: 150,
+			// 	height: 150
+			// });
+			var url = '{$data.url}';
+			new  QRCode(document.getElementById("qrcode"), url);
+			// var qrcode = new QRCode(document.getElementById("qrcode"), {
+			// 	text: '{$data.url}',
+			// 	width: 150,
+			// 	height: 150
+			// });
 
 			function makeCode() {
 				var elText = document.getElementById("text");
@@ -205,6 +208,7 @@
 
 				qrcode.makeCode(elText.value);
 			}
+
 
 			makeCode();
 
