--- a/application/index/view/login_register.html
+++ b/application/index/view/login_register.html
@@ -9,7 +9,7 @@
 		<link rel="stylesheet" href="__PUBLIC__css/reset.css">
 		<link rel="stylesheet" href="__PUBLIC__css/base.css" />
 		<link rel="stylesheet" href="__PUBLIC__css/register.css">
-		<!-- <link rel="stylesheet" href="__PUBLIC__css/public/layer.css"> -->
+		<link rel="stylesheet" href="__PUBLIC__css/public/alertWrap.css">
 <script src="https://cdn.staticfile.org/jquery/1.10.2/jquery.min.js">
 </script>
 	</head>
@@ -39,6 +39,14 @@
 								<input type="password" placeholder="请输入用户密码 6~16位" name="pwd" value class="pptt password">
 							</div>
 						</div>
+						<div class="info mistake"></div>
+					<div class="from-group">
+						<span class="from-tit">确认密码:</span>
+						<div class="from-icon">
+							<img src="__PUBLIC__images/login/suo.png" alt="">
+							<input type="password" placeholder="请第二次输入用户密码" name="pwd2" value class="pptt affirmpwd">
+						</div>
+					</div>
 						<div class="info mistake"></div>
 						<div class="from-group">
 							<span class="from-tit">邮箱:</span>
@@ -91,7 +99,7 @@
 	<script src="__PUBLIC__js/base.js"></script>
 	<script src="__PUBLIC__js/register.js"></script>
 	<script src="__PUBLIC__js/public/jquery-1.8.3.js"></script>
-	<!-- <script src="__PUBLIC__js/public/layer.js"></script> -->
+	<script src="__PUBLIC__js/public/publicAlert.js"></script>
 <script>
 
 
