--- a/public/css/register.css
+++ b/public/css/register.css
@@ -27,7 +27,7 @@
     }
 
     .reg-new-page{
-        padding:.2rem .3rem .2rem .3rem;
+        padding:.2rem .3rem 0rem .3rem;
         box-sizing: border-box;
         -webkit-box-sizing: border-box;
         -moz-box-sizing: border-box;
@@ -189,7 +189,7 @@
         display: -webkit-flex;
         display: flex;
         justify-content: space-between;
-        padding-top:.3rem;
+        padding-top:.2rem;
     }
     .login-new a{
         background-color: transparent;
