--- a/application/index/view/wallet_wallet.html
+++ b/application/index/view/wallet_wallet.html
@@ -73,7 +73,13 @@
 						
 						<input type="file" id="f"  name="f" style="display:none"/>
 						<div class="notarize" onclick="f.click()">上传凭证</div>
-						
+						<!--进度条-->
+						<div id="wrapper">
+							<div class="loader-container">
+							  <div class="meter">0</div>
+							  <span class="runner"></span>
+							</div>
+						</div>
 						<div class="notarize" onclick="sc(this);">确认投资</div>
 					</div>
         		</div>
